--- a/src/main/resources/README.html
+++ b/src/main/resources/README.html
@@ -23,7 +23,7 @@
 <a href="https://search.maven.org/#search%7Cga%7C1%7Cg%3A%22com.vladsch.javafx-webview-debugger%22" class="local-only" title=" **Target file not on GitHub. Link will only resolve locally.**"><img src="https://img.shields.io/maven-central/v/com.vladsch.javafx-webview-debugger/javafx-webview-debugger.svg" alt="Maven Central status" /></a></p>
 <p>Here is a teaser screenshot of dev tools running with JavaFX WebView, showing off the console
 logging from scripts, with caller location for one click navigation to source:</p>
-<p><img src="file:///Users/vlad/src/idea-multimarkdown2/JavaFx-WebView-Debugger/images/DevTools.png" alt="DevTools" /></p>
+<p><img src="DevTools.png" alt="DevTools" /></p>
 <h3 id="requirements"><a href="#requirements" name="requirements" class="anchor"><span class="octicon octicon-link"></span></a>Requirements</h3>
 <ul>
   <li>Java 8 (not tested with 9)</li>
